--- a/tools/buspirate-setup-for-osx/index.html
+++ b/tools/buspirate-setup-for-osx/index.html
@@ -369,6 +369,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/device.html">device</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/dotfiles.html">dotfiles</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/dsp.html">dsp</a>
       </span>
       <span class="tagcloud-button">
@@ -379,6 +382,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/equation.html">equation</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/forward.html">forward</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/fuzzy.html">fuzzy</a>
@@ -426,6 +432,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/regexp.html">regexp</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/script.html">script</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/search.html">search</a>
       </span>
       <span class="tagcloud-button">
@@ -450,6 +459,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/url.html">url</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/web.html">web</a>
       </span>
   </div>
@@ -465,7 +477,7 @@ s.setAttribute('data-timestamp', +new Date());
       <li><a href="https://tiborsimon.io/category/ios.html" title="Architecture Category Posts">ios</a> (1)</li>
       <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (2)</li>
       <li><a href="https://tiborsimon.io/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
-      <li><a href="https://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (1)</li>
+      <li><a href="https://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (2)</li>
       <li><a href="https://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (3)</li>
   </ul>
 </aside>
@@ -577,7 +589,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-09 18:56
+  Last build: 2016-03-19 12:56
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
