--- a/ios/local-mathjax-in-ios-apps/index.html
+++ b/ios/local-mathjax-in-ios-apps/index.html
@@ -469,8 +469,8 @@ s.setAttribute('data-timestamp', +new Date());
 
     </ul>
 <!-- Buttons end here --><div class="github-button">
-  <a href="https://github.com/tiborsimon/ios-local-mathjax-template" target="_blank"><i class="fa fa-github-alt"></i></a>
-  <a href="https://github.com/tiborsimon/ios-local-mathjax-template/releases/latest" target="_blank"><i class="fa fa-download"></i></a>
+    <a href="https://github.com/tiborsimon/ios-local-mathjax-template" target="_blank"><i class="fa fa-github-alt"></i></a>
+    <a href="https://github.com/tiborsimon/ios-local-mathjax-template/releases/latest" target="_blank"><i class="fa fa-download"></i></a>
 </div>
         </div>
       </div>
@@ -530,6 +530,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/accelerometer.html">accelerometer</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/api.html">api</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/basics.html">basics</a>
       </span>
       <span class="tagcloud-button">
@@ -566,6 +569,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/game.html">game</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/github.html">github</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>
       </span>
       <span class="tagcloud-button">
@@ -582,6 +588,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/jinja2.html">jinja2</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/key.html">key</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/lists.html">lists</a>
@@ -620,6 +629,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/soup.html">soup</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/ssh.html">ssh</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
       </span>
       <span class="tagcloud-button">
@@ -630,6 +642,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/upload.html">upload</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/url.html">url</a>
@@ -648,7 +663,7 @@ s.setAttribute('data-timestamp', +new Date());
       <li><a href="https://tiborsimon.io/category/embedded.html" title="Architecture Category Posts">embedded</a> (1)</li>
       <li><a href="https://tiborsimon.io/category/guitar.html" title="Architecture Category Posts">guitar</a> (1)</li>
       <li><a href="https://tiborsimon.io/category/ios.html" title="Architecture Category Posts">ios</a> (1)</li>
-      <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (2)</li>
+      <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (3)</li>
       <li><a href="https://tiborsimon.io/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
       <li><a href="https://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (2)</li>
       <li><a href="https://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (3)</li>
@@ -762,7 +777,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-19 12:56
+  Last build: 2016-03-19 18:37
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
