--- a/programming/writing-an-equation-engine/index.html
+++ b/programming/writing-an-equation-engine/index.html
@@ -786,6 +786,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/accelerometer.html">accelerometer</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/api.html">api</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/basics.html">basics</a>
       </span>
       <span class="tagcloud-button">
@@ -822,6 +825,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/game.html">game</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/github.html">github</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>
       </span>
       <span class="tagcloud-button">
@@ -838,6 +844,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/jinja2.html">jinja2</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/key.html">key</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/lists.html">lists</a>
@@ -876,6 +885,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/soup.html">soup</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/ssh.html">ssh</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
       </span>
       <span class="tagcloud-button">
@@ -886,6 +898,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/upload.html">upload</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/url.html">url</a>
@@ -904,7 +919,7 @@ s.setAttribute('data-timestamp', +new Date());
       <li><a href="https://tiborsimon.io/category/embedded.html" title="Architecture Category Posts">embedded</a> (1)</li>
       <li><a href="https://tiborsimon.io/category/guitar.html" title="Architecture Category Posts">guitar</a> (1)</li>
       <li><a href="https://tiborsimon.io/category/ios.html" title="Architecture Category Posts">ios</a> (1)</li>
-      <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (2)</li>
+      <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (3)</li>
       <li><a href="https://tiborsimon.io/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
       <li><a href="https://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (2)</li>
       <li><a href="https://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (3)</li>
@@ -1018,7 +1033,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-19 12:56
+  Last build: 2016-03-19 18:37
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
