--- a/web/chartjs-with-subtabbed-tabs/index.html
+++ b/web/chartjs-with-subtabbed-tabs/index.html
@@ -340,6 +340,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/accelerometer.html">accelerometer</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/api.html">api</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/basics.html">basics</a>
       </span>
       <span class="tagcloud-button">
@@ -376,6 +379,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/game.html">game</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/github.html">github</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>
       </span>
       <span class="tagcloud-button">
@@ -392,6 +398,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/jinja2.html">jinja2</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/key.html">key</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/lists.html">lists</a>
@@ -430,6 +439,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/soup.html">soup</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/ssh.html">ssh</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
       </span>
       <span class="tagcloud-button">
@@ -440,6 +452,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/upload.html">upload</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/url.html">url</a>
@@ -458,7 +473,7 @@ s.setAttribute('data-timestamp', +new Date());
       <li><a href="https://tiborsimon.io/category/embedded.html" title="Architecture Category Posts">embedded</a> (1)</li>
       <li><a href="https://tiborsimon.io/category/guitar.html" title="Architecture Category Posts">guitar</a> (1)</li>
       <li><a href="https://tiborsimon.io/category/ios.html" title="Architecture Category Posts">ios</a> (1)</li>
-      <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (2)</li>
+      <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (3)</li>
       <li><a href="https://tiborsimon.io/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
       <li><a href="https://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (2)</li>
       <li><a href="https://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (3)</li>
@@ -572,7 +587,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-19 12:56
+  Last build: 2016-03-19 18:37
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
