--- a/tools/buspirate-setup-for-osx/index.html
+++ b/tools/buspirate-setup-for-osx/index.html
@@ -55,6 +55,7 @@
           <li><a href="https://tiborsimon.io/index.html#portfolio">Portfolio</a></li>
           <!-- <li><a href="https://tiborsimon.io/worklog.html">Worklog</a></li> -->
           <li><a href="https://tiborsimon.io/index.html#about">About</a></li>
+          <li><a href="https://github.com/tiborsimon/ama" target="_blank"  title="Ask Me Anything">AMA</a></li>
         </ul>
       </nav>
 
@@ -420,6 +421,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/key.html">key</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/linux.html">linux</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/lists.html">lists</a>
       </span>
       <span class="tagcloud-button">
@@ -471,6 +475,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/unix.html">unix</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/upload.html">upload</a>
       </span>
       <span class="tagcloud-button">
@@ -492,7 +499,7 @@ s.setAttribute('data-timestamp', +new Date());
       <li><a href="https://tiborsimon.io/category/ios.html" title="Architecture Category Posts">ios</a> (1)</li>
       <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (3)</li>
       <li><a href="https://tiborsimon.io/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
-      <li><a href="https://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (2)</li>
+      <li><a href="https://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (3)</li>
       <li><a href="https://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (3)</li>
   </ul>
 </aside>
@@ -604,7 +611,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-20 19:05
+  Last build: 2016-04-03 01:04
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
