--- a/projects/dsp-controller/index.html
+++ b/projects/dsp-controller/index.html
@@ -4,19 +4,19 @@
   <title>DSP Controller - Tibor's lab</title>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto:300,400" rel="stylesheet">
-  <link rel="stylesheet" href="http://localhost:8000/css/style.css">
+  <link rel="stylesheet" href="https://tiborsimon.io/css/style.css">
   <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
 </head>
 <body>
   <nav class="flexwrap">
     <div class="navmenu card padded">
-        <a class="logo" href="http://localhost:8000">
+        <a class="logo" href="https://tiborsimon.io">
           Tibor's Lab 
         </a>
       <div class="group">
-        <a href="http://localhost:8000#articles">Articles</a>
-        <a href="http://localhost:8000#projects">Projects</a>
-        <a href="http://localhost:8000#about">About</a>
+        <a href="https://tiborsimon.io#articles">Articles</a>
+        <a href="https://tiborsimon.io#projects">Projects</a>
+        <a href="https://tiborsimon.io#about">About</a>
       </div>
     </div>
   </nav>
@@ -116,8 +116,8 @@
       </div>
       <div class="card">
         <nav class="sidebar-nav">
-            <a href="http://localhost:8000/projects/java-shooter-game" class="next-a">Previous</a>
-            <a href="http://localhost:8000/projects/simple-input-parser" class="previous-a">Next</a>
+            <a href="https://tiborsimon.io/projects/java-shooter-game" class="next-a">Previous</a>
+            <a href="https://tiborsimon.io/projects/simple-input-parser" class="previous-a">Next</a>
             <span class="neighbour-title next-title">Java shooter game</span>
             <span class="neighbour-title previous-title">Simple Input Parser</span>
         </nav>
@@ -125,112 +125,112 @@
       <div class="card padded">
         <h2>Tags</h2>
         <div class="tag-list">
-          <a href="http://localhost:8000/tag/hack/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/hack/#articles" class="count">
             hack<span>7</span>
           </a>
-          <a href="http://localhost:8000/tag/javascript/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/javascript/#articles" class="count">
             javascript<span>5</span>
           </a>
-          <a href="http://localhost:8000/tag/python/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/python/#articles" class="count">
             python<span>4</span>
           </a>
-          <a href="http://localhost:8000/tag/web/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/web/#articles" class="count">
             web<span>4</span>
           </a>
-          <a href="http://localhost:8000/tag/deploy/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/deploy/#articles" class="count">
             deploy<span>3</span>
           </a>
-          <a href="http://localhost:8000/tag/github/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/github/#articles" class="count">
             GitHub<span>3</span>
           </a>
-          <a href="http://localhost:8000/tag/tools/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/tools/#articles" class="count">
             tools<span>3</span>
           </a>
-          <a href="http://localhost:8000/tag/config/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/config/#articles" class="count">
             config<span>2</span>
           </a>
-          <a href="http://localhost:8000/tag/dotfiles/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/dotfiles/#articles" class="count">
             dotfiles<span>2</span>
           </a>
-          <a href="http://localhost:8000/tag/dsp/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/dsp/#articles" class="count">
             dsp<span>2</span>
           </a>
-          <a href="http://localhost:8000/tag/embedded/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/embedded/#articles" class="count">
             embedded<span>2</span>
           </a>
-          <a href="http://localhost:8000/tag/latex/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/latex/#articles" class="count">
             LaTEX<span>2</span>
           </a>
-          <a href="http://localhost:8000/tag/linux/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/linux/#articles" class="count">
             linux<span>2</span>
           </a>
-          <a href="http://localhost:8000/tag/mathjax/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/mathjax/#articles" class="count">
             MathJax<span>2</span>
           </a>
-          <a href="http://localhost:8000/tag/regexp/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/regexp/#articles" class="count">
             regexp<span>2</span>
           </a>
-          <a href="http://localhost:8000/tag/search/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/search/#articles" class="count">
             search<span>2</span>
           </a>
-          <a href="http://localhost:8000/tag/api/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/api/#articles" class="count">
             API<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/bash/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/bash/#articles" class="count">
             bash<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/cli/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/cli/#articles" class="count">
             CLI<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/control/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/control/#articles" class="count">
             control<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/debug/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/debug/#articles" class="count">
             debug<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/emacs/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/emacs/#articles" class="count">
             emacs<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/game/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/game/#articles" class="count">
             game<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/hardware/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/hardware/#articles" class="count">
             hardware<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/ios/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/ios/#articles" class="count">
             ios<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/java/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/java/#articles" class="count">
             java<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/make/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/make/#articles" class="count">
             make<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/matlab/#articles" class="count">
-            matlab<span>1</span>
-          </a>
-          <a href="http://localhost:8000/tag/matlab/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/matlab/#articles" class="count">
             Matlab<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/metalsmith/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/matlab/#articles" class="count">
+            matlab<span>1</span>
+          </a>
+          <a href="https://tiborsimon.io/tag/metalsmith/#articles" class="count">
             metalsmith<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/pelican/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/pelican/#articles" class="count">
             pelican<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/plugin/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/plugin/#articles" class="count">
             plugin<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/serial/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/serial/#articles" class="count">
             serial<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/signals/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/signals/#articles" class="count">
             signals<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/ssh/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/ssh/#articles" class="count">
             ssh<span>1</span>
           </a>
-          <a href="http://localhost:8000/tag/tool/#articles" class="count">
+          <a href="https://tiborsimon.io/tag/tool/#articles" class="count">
             tool<span>1</span>
           </a>
         </div>
