--- a/projects/clouds-are-coming/index.html
+++ b/projects/clouds-are-coming/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Clouds are coming - Tibor's lab</title>
   <meta charset="UTF-8">
+  <title>Clouds are coming - Tibor's Lab</title>
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto:300,400" rel="stylesheet">
+  <meta name="description" content="Clouds are coming. ">
   <link rel="stylesheet" href="https://tiborsimon.io/css/style.css">
-  <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
+  <link rel="shortcut icon" href="https://tiborsimon.io/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <nav class="flexwrap">
@@ -227,10 +228,10 @@
               make<span>1</span>
             </a>
             <a href="https://tiborsimon.io/tag/matlab/#articles" class="count">
-              matlab<span>1</span>
+              Matlab<span>1</span>
             </a>
             <a href="https://tiborsimon.io/tag/matlab/#articles" class="count">
-              Matlab<span>1</span>
+              matlab<span>1</span>
             </a>
             <a href="https://tiborsimon.io/tag/metalsmith/#articles" class="count">
               metalsmith<span>1</span>
