--- a/apps/index.html
+++ b/apps/index.html
@@ -86,6 +86,15 @@
           </div>
         </article>
       </div>
+      <div class="card">
+        <div class="fade-loader"></div>
+        <div class="fade-in">
+          <nav class="sidebar-nav">
+            <span>Previous</span>
+            <span>Next</span>
+          </nav>
+        </div>
+      </div>
       <div class="discussion card">
         <div class="fade-loader"></div>
         <div class="fade-in">
