--- a/projects/dotfiles/index.html
+++ b/projects/dotfiles/index.html
@@ -86,6 +86,17 @@
           </div>
         </article>
       </div>
+      <div class="card">
+        <div class="fade-loader"></div>
+        <div class="fade-in">
+          <nav class="sidebar-nav">
+            <a href="https://tiborsimon.io/projects/matlab-library-system" class="next-a">Previous</a>
+            <a href="https://tiborsimon.io/projects/projects" class="previous-a">Next</a>
+            <span class="neighbour-title next-title">MATLAB Library System</span>
+            <span class="neighbour-title previous-title">Projects</span>
+          </nav>
+        </div>
+      </div>
       <div class="discussion card">
         <div class="fade-loader"></div>
         <div class="fade-in">
