--- a/projects/led-chaser/index.html
+++ b/projects/led-chaser/index.html
@@ -86,6 +86,16 @@
           </div>
         </article>
       </div>
+      <div class="card">
+        <div class="fade-loader"></div>
+        <div class="fade-in">
+          <nav class="sidebar-nav">
+            <span>Previous</span>
+            <a href="https://tiborsimon.io/projects/clouds-are-coming" class="previous-a">Next</a>
+            <span class="neighbour-title previous-title">Clouds are coming</span>
+          </nav>
+        </div>
+      </div>
       <div class="discussion card">
         <div class="fade-loader"></div>
         <div class="fade-in">
