--- a/projects/dsp-controller/index.html
+++ b/projects/dsp-controller/index.html
@@ -86,6 +86,17 @@
           </div>
         </article>
       </div>
+      <div class="card">
+        <div class="fade-loader"></div>
+        <div class="fade-in">
+          <nav class="sidebar-nav">
+            <a href="https://tiborsimon.io/projects/java-shooter-game" class="next-a">Previous</a>
+            <a href="https://tiborsimon.io/projects/simple-input-parser" class="previous-a">Next</a>
+            <span class="neighbour-title next-title">Java shooter game</span>
+            <span class="neighbour-title previous-title">Simple Input Parser</span>
+          </nav>
+        </div>
+      </div>
       <div class="discussion card">
         <div class="fade-loader"></div>
         <div class="fade-in">
