--- a/projects/lightnings/index.html
+++ b/projects/lightnings/index.html
@@ -86,6 +86,17 @@
           </div>
         </article>
       </div>
+      <div class="card">
+        <div class="fade-loader"></div>
+        <div class="fade-in">
+          <nav class="sidebar-nav">
+            <a href="https://tiborsimon.io/projects/clouds-are-coming" class="next-a">Previous</a>
+            <a href="https://tiborsimon.io/projects/cold-front" class="previous-a">Next</a>
+            <span class="neighbour-title next-title">Clouds are coming</span>
+            <span class="neighbour-title previous-title">Cold front</span>
+          </nav>
+        </div>
+      </div>
       <div class="discussion card">
         <div class="fade-loader"></div>
         <div class="fade-in">
