--- a/projects/lovesong/index.html
+++ b/projects/lovesong/index.html
@@ -86,6 +86,17 @@
           </div>
         </article>
       </div>
+      <div class="card">
+        <div class="fade-loader"></div>
+        <div class="fade-in">
+          <nav class="sidebar-nav">
+            <a href="https://tiborsimon.io/projects/modern-love" class="next-a">Previous</a>
+            <a href="https://tiborsimon.io/projects/mustang-test" class="previous-a">Next</a>
+            <span class="neighbour-title next-title">Modern love</span>
+            <span class="neighbour-title previous-title">Mustang test</span>
+          </nav>
+        </div>
+      </div>
       <div class="discussion card">
         <div class="fade-loader"></div>
         <div class="fade-in">
