--- a/projects/simple-input-parser/index.html
+++ b/projects/simple-input-parser/index.html
@@ -86,6 +86,17 @@
           </div>
         </article>
       </div>
+      <div class="card">
+        <div class="fade-loader"></div>
+        <div class="fade-in">
+          <nav class="sidebar-nav">
+            <a href="https://tiborsimon.io/projects/dsp-controller" class="next-a">Previous</a>
+            <a href="https://tiborsimon.io/projects/smart-sinusoids" class="previous-a">Next</a>
+            <span class="neighbour-title next-title">DSP Controller</span>
+            <span class="neighbour-title previous-title">Smart Sinusoids</span>
+          </nav>
+        </div>
+      </div>
       <div class="discussion card">
         <div class="fade-loader"></div>
         <div class="fade-in">
