--- a/projects/starry-night/index.html
+++ b/projects/starry-night/index.html
@@ -86,6 +86,17 @@
           </div>
         </article>
       </div>
+      <div class="card">
+        <div class="fade-loader"></div>
+        <div class="fade-in">
+          <nav class="sidebar-nav">
+            <a href="https://tiborsimon.io/projects/milky-way" class="next-a">Previous</a>
+            <a href="https://tiborsimon.io/projects/this-is-the-life" class="previous-a">Next</a>
+            <span class="neighbour-title next-title">Milky Way</span>
+            <span class="neighbour-title previous-title">This is the life</span>
+          </nav>
+        </div>
+      </div>
       <div class="discussion card">
         <div class="fade-loader"></div>
         <div class="fade-in">
