--- a/apps/index.html
+++ b/apps/index.html
@@ -90,8 +90,8 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <span>Previous</span>
-            <span>Next</span>
+              <span><</span>
+            <span>></span>
           </nav>
         </div>
       </div>
@@ -140,8 +140,8 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <span>Previous</span>
-            <span>Next</span>
+              <span><</span>
+            <span>></span>
           </nav>
         </div>
       </div>
