--- a/projects/regart/index.html
+++ b/projects/regart/index.html
@@ -90,9 +90,9 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/projects" class="next-a">Previous</a>
-            <span>Next</span>
-            <span class="neighbour-title next-title">Projects</span>
+              <span><</span>
+            <a href="https://tiborsimon.io/projects/projects" class="next-a">></a>
+              <span class="neighbour-title next-title">Projects</span>
           </nav>
         </div>
       </div>
@@ -141,9 +141,9 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/projects" class="next-a">Previous</a>
-            <span>Next</span>
-            <span class="neighbour-title next-title">Projects</span>
+              <span><</span>
+            <a href="https://tiborsimon.io/projects/projects" class="next-a">></a>
+              <span class="neighbour-title next-title">Projects</span>
           </nav>
         </div>
       </div>
