--- a/projects/led-chaser/index.html
+++ b/projects/led-chaser/index.html
@@ -90,9 +90,9 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <span>Previous</span>
-            <a href="https://tiborsimon.io/projects/clouds-are-coming" class="previous-a">Next</a>
-            <span class="neighbour-title previous-title">Clouds are coming</span>
+              <a href="https://tiborsimon.io/projects/clouds-are-coming" class="previous-a"><</a>
+            <span>></span>
+              <span class="neighbour-title previous-title">Clouds are coming</span>
           </nav>
         </div>
       </div>
@@ -141,9 +141,9 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <span>Previous</span>
-            <a href="https://tiborsimon.io/projects/clouds-are-coming" class="previous-a">Next</a>
-            <span class="neighbour-title previous-title">Clouds are coming</span>
+              <a href="https://tiborsimon.io/projects/clouds-are-coming" class="previous-a"><</a>
+            <span>></span>
+              <span class="neighbour-title previous-title">Clouds are coming</span>
           </nav>
         </div>
       </div>
