--- a/projects/lovesong/index.html
+++ b/projects/lovesong/index.html
@@ -90,10 +90,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/modern-love" class="next-a">Previous</a>
-            <a href="https://tiborsimon.io/projects/mustang-test" class="previous-a">Next</a>
-            <span class="neighbour-title next-title">Modern love</span>
-            <span class="neighbour-title previous-title">Mustang test</span>
+              <a href="https://tiborsimon.io/projects/mustang-test" class="previous-a"><</a>
+            <a href="https://tiborsimon.io/projects/modern-love" class="next-a">></a>
+              <span class="neighbour-title next-title">Modern love</span>
+              <span class="neighbour-title previous-title">Mustang test</span>
           </nav>
         </div>
       </div>
@@ -142,10 +142,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/modern-love" class="next-a">Previous</a>
-            <a href="https://tiborsimon.io/projects/mustang-test" class="previous-a">Next</a>
-            <span class="neighbour-title next-title">Modern love</span>
-            <span class="neighbour-title previous-title">Mustang test</span>
+              <a href="https://tiborsimon.io/projects/mustang-test" class="previous-a"><</a>
+            <a href="https://tiborsimon.io/projects/modern-love" class="next-a">></a>
+              <span class="neighbour-title next-title">Modern love</span>
+              <span class="neighbour-title previous-title">Mustang test</span>
           </nav>
         </div>
       </div>
