--- a/projects/milky-way/index.html
+++ b/projects/milky-way/index.html
@@ -90,10 +90,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/cold-front" class="next-a">Previous</a>
-            <a href="https://tiborsimon.io/projects/starry-night" class="previous-a">Next</a>
-            <span class="neighbour-title next-title">Cold front</span>
-            <span class="neighbour-title previous-title">Starry Night</span>
+              <a href="https://tiborsimon.io/projects/starry-night" class="previous-a"><</a>
+            <a href="https://tiborsimon.io/projects/cold-front" class="next-a">></a>
+              <span class="neighbour-title next-title">Cold front</span>
+              <span class="neighbour-title previous-title">Starry Night</span>
           </nav>
         </div>
       </div>
@@ -142,10 +142,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/cold-front" class="next-a">Previous</a>
-            <a href="https://tiborsimon.io/projects/starry-night" class="previous-a">Next</a>
-            <span class="neighbour-title next-title">Cold front</span>
-            <span class="neighbour-title previous-title">Starry Night</span>
+              <a href="https://tiborsimon.io/projects/starry-night" class="previous-a"><</a>
+            <a href="https://tiborsimon.io/projects/cold-front" class="next-a">></a>
+              <span class="neighbour-title next-title">Cold front</span>
+              <span class="neighbour-title previous-title">Starry Night</span>
           </nav>
         </div>
       </div>
