--- a/projects/modern-love/index.html
+++ b/projects/modern-love/index.html
@@ -90,10 +90,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/this-is-the-life" class="next-a">Previous</a>
-            <a href="https://tiborsimon.io/projects/lovesong" class="previous-a">Next</a>
-            <span class="neighbour-title next-title">This is the life</span>
-            <span class="neighbour-title previous-title">Lovesong</span>
+              <a href="https://tiborsimon.io/projects/lovesong" class="previous-a"><</a>
+            <a href="https://tiborsimon.io/projects/this-is-the-life" class="next-a">></a>
+              <span class="neighbour-title next-title">This is the life</span>
+              <span class="neighbour-title previous-title">Lovesong</span>
           </nav>
         </div>
       </div>
@@ -142,10 +142,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/this-is-the-life" class="next-a">Previous</a>
-            <a href="https://tiborsimon.io/projects/lovesong" class="previous-a">Next</a>
-            <span class="neighbour-title next-title">This is the life</span>
-            <span class="neighbour-title previous-title">Lovesong</span>
+              <a href="https://tiborsimon.io/projects/lovesong" class="previous-a"><</a>
+            <a href="https://tiborsimon.io/projects/this-is-the-life" class="next-a">></a>
+              <span class="neighbour-title next-title">This is the life</span>
+              <span class="neighbour-title previous-title">Lovesong</span>
           </nav>
         </div>
       </div>
