--- a/projects/smart-sinusoids/index.html
+++ b/projects/smart-sinusoids/index.html
@@ -90,10 +90,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/simple-input-parser" class="next-a">Previous</a>
-            <a href="https://tiborsimon.io/projects/matlab-library-system" class="previous-a">Next</a>
-            <span class="neighbour-title next-title">Simple Input Parser</span>
-            <span class="neighbour-title previous-title">MATLAB Library System</span>
+              <a href="https://tiborsimon.io/projects/matlab-library-system" class="previous-a"><</a>
+            <a href="https://tiborsimon.io/projects/simple-input-parser" class="next-a">></a>
+              <span class="neighbour-title next-title">Simple Input Parser</span>
+              <span class="neighbour-title previous-title">MATLAB Library System</span>
           </nav>
         </div>
       </div>
@@ -142,10 +142,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-            <a href="https://tiborsimon.io/projects/simple-input-parser" class="next-a">Previous</a>
-            <a href="https://tiborsimon.io/projects/matlab-library-system" class="previous-a">Next</a>
-            <span class="neighbour-title next-title">Simple Input Parser</span>
-            <span class="neighbour-title previous-title">MATLAB Library System</span>
+              <a href="https://tiborsimon.io/projects/matlab-library-system" class="previous-a"><</a>
+            <a href="https://tiborsimon.io/projects/simple-input-parser" class="next-a">></a>
+              <span class="neighbour-title next-title">Simple Input Parser</span>
+              <span class="neighbour-title previous-title">MATLAB Library System</span>
           </nav>
         </div>
       </div>
