--- a/projects/regart/index.html
+++ b/projects/regart/index.html
@@ -89,9 +89,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-              <span><</span>
+              <a href="https://tiborsimon.io/projects/logotools" class="previous-a"><</a>
             <a href="https://tiborsimon.io/projects/projects" class="next-a">></a>
               <span class="neighbour-title next-title">Projects</span>
+              <span class="neighbour-title previous-title">Logotools</span>
           </nav>
         </div>
       </div>
@@ -140,9 +141,10 @@
         <div class="fade-loader"></div>
         <div class="fade-in">
           <nav class="sidebar-nav">
-              <span><</span>
+              <a href="https://tiborsimon.io/projects/logotools" class="previous-a"><</a>
             <a href="https://tiborsimon.io/projects/projects" class="next-a">></a>
               <span class="neighbour-title next-title">Projects</span>
+              <span class="neighbour-title previous-title">Logotools</span>
           </nav>
         </div>
       </div>
