--- a/mg/index.html
+++ b/mg/index.html
@@ -138,7 +138,7 @@
 
     var nowItem = document.getElementById("now");
 
-    var start = moment("2015.06.27. 09:00:00");
+    var start = moment("2015-06-27 09:00:00");
 
     var formatNumber = function formatNumber(n) {
       var s = n.toString().match(/(\d+?)(?=(\d{3})+(?!\d)|$)/g);
